--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:dockerized": "npx prisma migrate deploy && NODE_ENV=prod node dist/main",
+    "prisma:format": "npx prisma format",
+    "prisma:generate": "npx prisma generate",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,13 +22,18 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "bin": {
+    "healthcheck": "./bin/healthcheck.cjs"
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "^7.1.17",
+    "@nestjs/terminus": "^10.2.3",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.5",
