--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "healthcheck": "./bin/healthcheck.cjs"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
@@ -39,7 +41,7 @@
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.7.1",
-    "axios": "^1.6.5",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
